<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.liveticker.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />

        <action
            android:id="@+id/action_FirstFragment_to_CoinDetailFragment"
            app:destination="@id/CoinDetailFragment" />

        <action
            android:id="@+id/action_FirstFragment_to_PredictionMarketFragment"
            app:destination="@id/PredictionMarketFragment" />

        <action
            android:id="@+id/action_FirstFragment_to_MarketBrowserFragment"
            app:destination="@id/MarketBrowserFragment" />
    </fragment>

    <fragment
        android:id="@+id/CoinDetailFragment"
        android:name="com.example.liveticker.CoinDetailFragment"
        android:label="@string/coin_detail_label"
        tools:layout="@layout/fragment_coin_detail">

        <argument
            android:name="coin_id"
            app:argType="string" />
        <argument
            android:name="coin_name"
            app:argType="string"
            android:defaultValue="" />
        <argument
            android:name="coin_symbol"
            app:argType="string"
            android:defaultValue="" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.liveticker.SecondFragment"
        android:label="Portfolio"
        tools:layout="@layout/fragment_second">

        <argument
            android:name="wallet_address"
            app:argType="string"
            android:defaultValue="" />

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />

        <action
            android:id="@+id/action_SecondFragment_to_CoinDetailFragment"
            app:destination="@id/CoinDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/PredictionMarketFragment"
        android:name="com.example.liveticker.PredictionMarketFragment"
        android:label="@string/prediction_markets_title"
        tools:layout="@layout/fragment_prediction_market">

        <argument
            android:name="wallet_address"
            app:argType="string"
            android:defaultValue="" />

        <action
            android:id="@+id/action_PredictionMarketFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>

    <fragment
        android:id="@+id/MarketBrowserFragment"
        android:name="com.example.liveticker.MarketBrowserFragment"
        android:label="Market Browser"
        tools:layout="@layout/fragment_market_browser">

        <action
            android:id="@+id/action_MarketBrowserFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>

    <dialog
        android:id="@+id/appKit"
        android:name="com.reown.appkit.ui.AppKitSheet" />
</navigation>